ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k3s-1.mshome.net
  - http:
      paths:
      - path: /podinfo
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 80
